<resources>
    <string name="app_name">Cilicili</string>
    <string name="action_settings">Settings</string>

    <string name="zhibo">直播</string>
    <string name="tuijian">推荐</string>
    <string name="zhuifan">追番</string>
    <string name="yingshi">影视</string>
    <string name="zhuanlan">专栏</string>
    <string name="shouye">首页</string>
    <string name="fenqu">分区</string>
    <string name="dongtai">动态</string>
    <string name="xiaoxi">消息</string>
    <string name="zonghe">综合</string>
    <string name="paihangbang">排行榜</string>
    <string name="biaoqian">标签</string>
</resources>
